test/files/res/t687.check

nsc> 
nsc> t687/QueryB.scala:3: error: name clash between defined and inherited member:
def equals(x$1: Any): Boolean in class Any and
override def equals(o: Object): Boolean at line 3
have same type after erasure: (x$1: Object)Boolean
  override def equals(o : Object) = false;
               ^
